<resources>
    <string name="app_name">بنك الدم</string>
    <string name="copy_right">جميع الحقوق محفوظة لشركة إبداع تك للبرمجيات 2018</string>
    <string name="skip">تخطى</string>
    <string name="phone">الجوال</string>
    <string name="check_code">كود التحقق</string>
    <string name="time_out">الوقت انتهى , اطلب كود جديد</string>
    <string name="remind_time">الوقت المتبقي :</string>

    <string name="password">كلمة المرور</string>
    <string name="retry_password">إعادة كلمة المرور</string>
    <string name="select_gaverment">الحي</string>
    <string name="select_city">المدينة</string>


    <string name="rememberMy">تذكرني</string>
    <string name="forget_password">هل نسيت كلمة المرور</string>
    <string name="forget_my_password">نسيت كلمة المرور</string>
    <string name="code_change_my_password">كود تغيير كلمةالمرور</string>

    <string name="send">إرسال </string>

    <string name="login">دخول </string>
    <string name="create_new_user">إنشاء حساب جديد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_back">Back</string>
    <string name="action_notification">Notification</string>

    <string name="email">البريد الإلكتروني</string>
    <string name="date">تاريخ الميلاد</string>
    <string name="blood_type">نوع فصيلة الدم</string>
    <string name="last_date">اخر مرة للتبرع</string>
    <string name="regester">تسجيل</string>
    <string name="change_password">تغيير كلمة المرور</string>


    <!-- TODO:  texts  for activity_home_drawer.xml -->

    <string name="my_information">معلوماتي</string>
    <string name="setting_notification">اعدادات الإشعارات</string>
    <string name="my_favorite">المفضلة</string>
    <string name="home">الرئيسية</string>
    <string name="used_information">تعليمات الاستخدام</string>
    <string name="connect_with_us">تواصل معنا</string>
    <string name="about_app">عن التطبيق</string>
    <string name="evaluate_app">تقييم التطبيق على المتجر</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="edit_information"> تعديل البيانات </string>

    <string name="filed_request">هذا الحقل مطلوب</string>
    <string name="all_filed_request">كل الحقول مطلوبة</string>

    <string name="no_internet">للأسف , لا يوجداتصال بالانترنت </string>

    <string name="patient_name">اسم المريض :  </string>
    <string name="hospital">اسم المستشفى : </string>
    <string name="cityDoantionRequestCreate">المدينة : </string>


    <string name="articles">المقالات </string>
    <string name="request_donation">طلبات التبرع</string>
    <string name="no_data">لا توجد بيانات...</string>
    <string name="no_title">لا يوجد عنوان</string>
    <string name="details">تفاصيل</string>
    <string name="call">اتصال</string>


    <string name="name">الاسم :  </string>
    <string name="age">العمر :  </string>
    <string name="number_package_request">عدد الاكياس :  </string>
    <string name="address_hospital">عنوان المستشفى :  </string>
    <string name="notes">ملاحظات</string>
    <string name="send_request">إرسال الطلب</string>
    <string name="tite_message">عنوان الرسالة</string>
    <string name="text_message">نص الرسالة</string>

    <string name="select_number_package">Select Number Package Blood  </string>


    <!-- For Fragment Preferences -->

    <string name="settings_value_default_A_plus" translatable="false">A+</string>
    <string name="settings_from_date_key_A_plus" translatable="false">A+</string>
    <string name="settings_from_date_label_A_plus"> A+</string>

    <string name="settings_value_default_A_sub" translatable="false">A-</string>
    <string name="settings_from_date_key_A_sub" translatable="false">A-</string>
    <string name="settings_from_date_label_A_sub"> A-</string>

    <string name="settings_value_default_B_sub" translatable="false">B-</string>
    <string name="settings_from_date_key_B_sub" translatable="false">B-</string>
    <string name="settings_from_date_label_B_sub"> B-</string>

    <string name="settings_value_default_B_plus" translatable="false">B+</string>
    <string name="settings_from_date_key_B_plus" translatable="false">B+</string>
    <string name="settings_from_date_label_B_plus"> B+</string>

    <string name="settings_value_default_AB_plus" translatable="false">AB+</string>
    <string name="settings_from_date_key_AB_plus" translatable="false">AB+</string>
    <string name="settings_from_date_label_AB_plus"> AB+</string>

    <string name="settings_value_default_AB_sub" translatable="false">AB-</string>
    <string name="settings_from_date_key_AB_sub" translatable="false">AB-</string>
    <string name="settings_from_date_label_AB_sub"> AB-</string>


    <string name="google_android_map_api_key"> AIzaSyDNOiMkuJGxxSwLfConFex3aMwPiUQRk_0 </string>
    <string name="exit_app">Press Back again to Exit.</string>
    <string name="some_text">هذا النص هو مثال لعرض نصوص اخرى تاتي من الموقع وهذا فقط اختبار لها</string>
    <string name="enter_search">ادخل كلمة البحث هنا</string>
    <string name="selct_blood_and_city">اختر نوع فصيلةالدم والمدينة</string>
    <string name="alarm">تنبية بخصوص طلبك رقم:</string>
    <string name="blood_types">فصايل الدم</string>
    <string name="govermentes">المحافظات</string>
    <string name="save">حفظ</string>
    <string name="no_notifications">لا توجد إشعارات</string>
    <string name="alarms">التنبيهات</string>

</resources>
