<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting_notification">

    <CheckBoxPreference android:id="@+id/A_plus"
         android:title="@string/settings_from_date_label_A_plus"
        android:key="@string/settings_from_date_key_A_plus"
        />
    <CheckBoxPreference android:id="@+id/A_sub"
        android:title="@string/settings_from_date_label_A_sub"
        android:key="@string/settings_from_date_key_A_sub"
                />

    <CheckBoxPreference android:id="@+id/B_plus"
        android:title="@string/settings_from_date_label_B_plus"
        android:key="@string/settings_from_date_key_B_plus"
        />
    <CheckBoxPreference android:id="@+id/B_sub"
        android:title="@string/settings_from_date_label_B_sub"
        android:key="@string/settings_from_date_key_B_sub"
        />
    <CheckBoxPreference android:id="@+id/AB_plus"
        android:title="@string/settings_from_date_label_AB_plus"
        android:key="@string/settings_from_date_key_AB_plus"
        />
    <CheckBoxPreference android:id="@+id/AB_sub"
        android:title="@string/settings_from_date_label_AB_sub"
        android:key="@string/settings_from_date_key_AB_sub"
        />

</PreferenceScreen>