<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".u.ui.fregmants.homeCycle.regusets.RequestDonationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_Name_Patient"
                style="@style/StyleEditTextNull"
                android:hint="@string/patient_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_Age_Patient"
                style="@style/StyleEditTextNull"
                android:hint="@string/age" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/Spinner_Blood_Types_Request_Donation"
            style="@style/SpinnerForFragment"
           />

        <Spinner
            android:id="@+id/Spinner_Number_Package"
            style="@style/SpinnerForFragment"
            android:hint="@string/number_package_request"
            app:met_floatingLabel="highlight" />


        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_Name_Hospital_Patient"
                style="@style/StyleEditTextNull"
                android:hint="@string/hospital" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/Fragment_Adrees_Hospital"
            style="@style/StyleEditText"
            android:drawableEnd="@drawable/ic_map"
            android:hint="@string/address_hospital" />

        <Spinner
            android:id="@+id/Spinner_Gaverment_Request_Donation"
            style="@style/SpinnerForFragment"
            android:hint="@string/select_gaverment"
            app:met_floatingLabel="highlight" />


        <Spinner
            android:id="@+id/Spinner_City_Request_Donation"
            style="@style/SpinnerForFragment"
            android:hint="@string/select_city"
            app:met_floatingLabel="highlight" />

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_Phone_Patient"
                style="@style/StyleEditTextNull"
                android:hint="@string/phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/StyleEditText"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_Notes_Patient"
                style="@style/StyleEditTextNull"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:lines="5"

                />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/BT_Send_Request"
            style="@style/StyleButton"
            android:layout_marginBottom="30dp"
            android:background="@color/colorButtonRegester"
            android:text="@string/send_request" />

    </LinearLayout>


</ScrollView>