<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.fregmants.userCycle.LoginFragment">

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_height_logo"
                android:src="@mipmap/logo"
                android:layout_marginTop="@dimen/dimens_xl"/>
          <android.support.design.widget.TextInputLayout
              android:id="@+id/Fragment_Phone_Login"
              style="@style/StyleEditText"
             >
              <android.support.design.widget.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/phone"

                  />
          </android.support.design.widget.TextInputLayout>

          <android.support.design.widget.TextInputLayout
              android:id="@+id/Fragment_Password_Login"

              style="@style/StyleEditText"
              >
              <android.support.design.widget.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/password"

                  />

          </android.support.design.widget.TextInputLayout>

          <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/forget_password"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/dimens_l"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_warning"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_marginStart="@dimen/dimens_l"
                    />

                <CheckBox
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:text="@string/rememberMy"
                    android:layout_marginTop="@dimen/dimens_l"
                    android:layout_marginEnd="@dimen/dimens_l"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
            <Button
                android:id="@+id/login"
                style="@style/StyleButton"
                android:text="@string/login"
                android:background="@color/colorButtonLogin"
                />
            <Button
                android:id="@+id/cretae_new_user"
                style="@style/StyleButton"
                android:text="@string/create_new_user"
                android:background="@color/colorButtonCreate"
                />

        </LinearLayout>

    </ScrollView>