<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fregmants.userCycle.ForgetPasswordStep2Fragment">
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_height_logo"
        android:src="@mipmap/logo"/>
    <TextView
        android:id="@+id/tv_forget_my_password"
        android:layout_below="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_xxxxl"
        android:gravity="center"
        android:textSize="@dimen/txt_size_xl"
        android:textColor="@android:color/black"
        android:text="@string/code_change_my_password" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Fragment_Code_Check_Step2"
        android:layout_below="@+id/tv_forget_my_password"
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_code"

            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Fragment_New_Password_Step2"
        android:layout_below="@+id/Fragment_Code_Check_Step2"
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Fragment_Sure_New_Password_Step2"
        android:layout_below="@+id/Fragment_New_Password_Step2"
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retry_password"

            />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bt_Change_Password_Step2"
        android:layout_below="@+id/Fragment_Sure_New_Password_Step2"
        style="@style/StyleButton"
        android:text="@string/change_password"
        android:background="@color/colorButtonLogin"
        />
</RelativeLayout>