<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".u.ui.fregmants.userCycle.RegesterFragment">
    android:text="@string/create_new_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_6xl"
            android:background="@android:color/white"
            android:gravity="center">

            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_xl" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout

            style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegesterFragment_Name"
                style="@style/StyleEditTextNull"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegesterFragment_Email"
                style="@style/StyleEditTextNull"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/RegesterFragment__Date_Of_Birth"
            style="@style/StyleTextVewForCalender"
            android:drawableEnd="@drawable/ic_calender"
            android:drawablePadding="@dimen/dimens_l"
            android:gravity="center_vertical"
            android:hint="@string/date" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_l"
            android:layout_marginTop="@dimen/dimens_m"
            android:layout_marginEnd="@dimen/dimens_l"
            android:background="@drawable/background_spinner">

            <Spinner
                android:id="@+id/RegesterFragment_Blood_Type"
                style="@style/SpinnerForFragment"
                android:layout_centerVertical="true"
                android:gravity="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/RegesterFragment_Last_Date_Donation"
            style="@style/StyleTextVewForCalender"
            android:drawableEnd="@drawable/ic_calender"
            android:drawablePadding="@dimen/dimens_l"
            android:gravity="center_vertical"
            android:hint="@string/last_date" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_l"
            android:layout_marginTop="@dimen/dimens_m"
            android:layout_marginEnd="@dimen/dimens_l"
            android:background="@drawable/background_spinner">

            <Spinner
                android:id="@+id/RegesterFragment_SP_Gaverment"
                style="@style/SpinnerForFragment"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:popupBackground="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_l"
            android:layout_marginTop="@dimen/dimens_m"
            android:layout_marginEnd="@dimen/dimens_l"
            android:background="@drawable/background_spinner">

            <ProgressBar
                android:id="@+id/RegesterFragment_Progress_Bar"
                style="@style/StyleProgressBar" />

            <Spinner
                android:id="@+id/RegesterFragment_SP_City"
                style="@style/SpinnerForFragment"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:popupBackground="@android:color/white" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegesterFragment_Phone"
                style="@style/StyleEditTextNull"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegesterFragment_Password"
                style="@style/StyleEditTextNull"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/StyleEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegesterFragment_Retry_Password"
                style="@style/StyleEditTextNull"
                android:hint="@string/retry_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/RegesterFragment_BT_Regester"
            style="@style/StyleButton"
            android:background="@color/colorButtonRegester"
            android:text="@string/regester" />
    </LinearLayout>
</ScrollView>