<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fregmants.userCycle.ForgetPasswordStep1Fragment">

<ImageView
    android:id="@+id/image_logo"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimens_height_logo"
    android:src="@mipmap/logo"/>
    <TextView
        android:id="@+id/tv_forget_my_password"
        android:layout_below="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_xxxxl"
        android:gravity="center"
        android:textSize="@dimen/txt_size_xl"
        android:textColor="@android:color/black"
        android:text="@string/forget_my_password" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Fragment_Phone_Forget_Step1"
        android:layout_below="@+id/tv_forget_my_password"
        style="@style/StyleEditText"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"

            />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bt_Send_Forget_Step1"
        android:layout_below="@+id/Fragment_Phone_Forget_Step1"
        style="@style/StyleButton"
        android:text="@string/send"
        android:background="@color/colorButtonLogin"
        />
</RelativeLayout>